--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,7 @@ dist
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,node,visualstudiocode
+
+# REMOVE IT LATER
+
+*.md
